--- a/GameFactoryWPF/MainWindow.xaml
+++ b/GameFactoryWPF/MainWindow.xaml
@@ -1,41 +1,73 @@
-﻿<Window x:Class="GameFactoryWPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        Background="{DynamicResource MaterialDesignPaper}"
-        Title="GameFactory" Height="900" Width="1600"
-        Style="{StaticResource MaterialDesignWindow}"
-        BorderThickness="0"
-        MouseDown="MainWindow_MouseDown">
-    
+﻿<Window
+    x:Class="GameFactoryWPF.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="GameFactory"
+    Width="1600"
+    Height="900"
+    Background="{DynamicResource MaterialDesignPaper}"
+    BorderThickness="0"
+    MouseDown="MainWindow_MouseDown"
+    Style="{StaticResource MaterialDesignWindow}"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    mc:Ignorable="d">
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources.xaml"/>
+                <ResourceDictionary Source="Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
 
     <Grid>
-        
-        
-        <Ellipse Fill="{DynamicResource SecondaryHueDarkBrush}" Width="1200" Height="1200" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="-500,0,0,-500" />
-        <Ellipse Fill="{DynamicResource MaterialDesignPaper}" Width="1100" Height="1100" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="-450,0,0,-450" />
-        <Canvas HorizontalAlignment="Right" VerticalAlignment="Top" Width="1200" Height="1200" Margin="0,-400,-400,0">
-            <Canvas.RenderTransform>
-                <RotateTransform CenterX="600" CenterY="600" Angle="20" />
-            </Canvas.RenderTransform>
-            <Line X1="600" Y1="0" X2="600" Y2="1200" Stroke="DarkRed" StrokeThickness="52"/>
-            <Line X1="0" Y1="600" X2="1200" Y2="600" Stroke="DarkRed" StrokeThickness="52"/>
-        </Canvas>
-        
-        
+
+        <Grid Name="Background">
+            <Ellipse
+                Width="1200"
+                Height="1200"
+                Margin="-500,0,0,-500"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Fill="{DynamicResource SecondaryHueDarkBrush}" />
+            <Ellipse
+                Width="1100"
+                Height="1100"
+                Margin="-450,0,0,-450"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Fill="{DynamicResource MaterialDesignPaper}" />
+            <Canvas
+                Width="1200"
+                Height="1200"
+                Margin="0,-400,-400,0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top">
+                <Canvas.RenderTransform>
+                    <RotateTransform Angle="20" CenterX="600" CenterY="600" />
+                </Canvas.RenderTransform>
+                <Line
+                    Stroke="DarkRed"
+                    StrokeThickness="52"
+                    X1="600"
+                    X2="600"
+                    Y1="0"
+                    Y2="1200" />
+                <Line
+                    Stroke="DarkRed"
+                    StrokeThickness="52"
+                    X1="0"
+                    X2="1200"
+                    Y1="600"
+                    Y2="600" />
+            </Canvas>
+        </Grid>
+
         <Grid x:Name="WelcomeSection">
-            
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100*" />
                 <ColumnDefinition Width="100*" />
@@ -47,10 +79,33 @@
                 <RowDefinition Height="100*" />
                 <RowDefinition Height="100*" />
             </Grid.RowDefinitions>
-            
-            <TextBlock Grid.Row="1" Grid.Column="1" Margin="100,40,100,0" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Foreground="{DynamicResource SecondaryHueMidBrush}"   TextAlignment="Center" Height="100" VerticalAlignment="Center" >Welcome to<LineBreak /> the GameFactory!</TextBlock>
-            <TextBlock Grid.Row="2" Grid.Column="1" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Foreground="{DynamicResource SecondaryHueMidBrush}"   TextAlignment="Center" Height="100" VerticalAlignment="Center" >Click anywhere to continue!</TextBlock>
+
+
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="1"
+                Height="100"
+                Margin="100,40,100,0"
+                VerticalAlignment="Center"
+                Foreground="{DynamicResource SecondaryHueMidBrush}"
+                Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                TextAlignment="Center">
+                Welcome to<LineBreak />
+                the GameFactory!</TextBlock>
+            <TextBlock
+                Grid.Row="2"
+                Grid.Column="1"
+                Height="100"
+                VerticalAlignment="Center"
+                Foreground="{DynamicResource SecondaryHueMidBrush}"
+                Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                TextAlignment="Center">
+                Click anywhere to continue!
+            </TextBlock>
+
+
         </Grid>
+
         <Grid x:Name="LoginSection" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100*" />
@@ -63,21 +118,97 @@
                 <RowDefinition Height="100*" />
                 <RowDefinition Height="100*" />
             </Grid.RowDefinitions>
-            <materialDesign:Card Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" >
+
+            <materialDesign:Card
+                Grid.Row="0"
+                Grid.Column="0"
+                Grid.ColumnSpan="3">
                 <Menu materialDesign:MenuAssist.TopLevelMenuItemHeight="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type materialDesign:Card}}, Path=ActualHeight}">
                     <MenuItem Header="File">
-                        <MenuItem      Header="_LeaderBoard" Click="ToLeaderboard" />
-                        <MenuItem        Header="_Stats" Click="ToStats" />
-                        <MenuItem        Header="_TTT" Click="ToTTT" />
+                        <MenuItem Click="ToLeaderboard" Header="_LeaderBoard" />
+                        <MenuItem Click="ToStats" Header="_Stats" />
+                        <MenuItem Click="ToTTT" Header="_TTT" />
                     </MenuItem>
                 </Menu>
             </materialDesign:Card>
-            <TextBlock Margin="100,40,100,0" Grid.Row="1" Grid.Column="0" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Foreground="{DynamicResource SecondaryHueMidBrush}"   TextAlignment="Center" Height="100" VerticalAlignment="Center" >Login to<LineBreak /> GameFactory <LineBreak /> to start the fun!!!</TextBlock>
-            <TextBox  Margin="100,30,100,0" Grid.Row="2" Grid.Column="0" Name="Username" Style="{StaticResource MaterialDesignFloatingHintTextBox}"   materialDesign:HintAssist.Hint="UserName" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="50" VerticalAlignment="Top"/>
-            <PasswordBox Margin="100,100,100,0" Grid.Row="2" Grid.Column="0" Name="Password" Style="{StaticResource MaterialDesignFloatingHintRevealPasswordBox}"   Height="50" materialDesign:HintAssist.Hint="************" materialDesign:PasswordBoxAssist.IsPasswordRevealed="False" VerticalAlignment="Top" KeyDown="Login_KeyDown" />
-            <Button Grid.Row="3" Grid.Column="0" Margin="100,10,100,0" Name="Login" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Click="Login_Click"  Height="32" VerticalAlignment="Top">Login</Button>
-            <Button Grid.Row="3" Grid.Column="0" Margin="100,60,100,0" Name="Register" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Click="Register_Click"  Height="32" VerticalAlignment="Top">SignUp</Button>
-            <Button Grid.Row="3" Grid.Column="0" Margin="100,110,100,0" Name="Guest" Style="{StaticResource MaterialDesignFlatAccentBgButton}" Click="Login_Click" Height="32" Foreground="Gray" VerticalAlignment="Top">Guest</Button>
+
+
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="0"
+                Height="100"
+                VerticalAlignment="Center"
+                Foreground="{DynamicResource SecondaryHueMidBrush}"
+                Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                TextAlignment="Center">
+                Login to<LineBreak />
+                GameFactory<LineBreak />
+                to start the fun!!!</TextBlock>
+
+            <!--<Grid
+                x:Name="InputBoxes"
+                Grid.Row="2"
+                Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="50" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200" />
+                </Grid.ColumnDefinitions>
+                <TextBox
+                    Name="Username"
+                    Grid.Row="0"
+                    Height="50"
+                    
+                    Width="200"
+                    materialDesign:HintAssist.Hint="UserName"
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                    />
+                <PasswordBox
+                    Name="Password"
+                    Grid.Row="1"
+                    Height="50"
+                    Margin="10,10"
+                    materialDesign:HintAssist.Hint="************"
+                    materialDesign:PasswordBoxAssist.IsPasswordRevealed="False"
+                    KeyDown="Login_KeyDown"
+                    Style="{StaticResource MaterialDesignFloatingHintRevealPasswordBox}" />
+
+            </Grid>-->
+
+
+            <Button
+                Name="Login"
+                Grid.Row="3"
+                Grid.Column="0"
+                Margin="60,10,60,0"
+                Click="Login_Click"
+                Style="{StaticResource MaterialDesignFlatAccentBgButton}">
+                Login
+            </Button>
+            <Button
+                Name="Register"
+                Grid.Row="3"
+                Grid.Column="0"
+                Height="32"
+                Margin="60,10,60,0"
+                Command="{x:Static materialDesign:Flipper.FlipCommand}"
+                Style="{StaticResource MaterialDesignFlatAccentBgButton}">
+                SignUp
+            </Button>
+            <Button
+                Name="Guest"
+                Grid.Row="3"
+                Grid.Column="0"
+                Height="32"
+                Margin="100,110,100,0"
+                VerticalAlignment="Top"
+                Click="Login_Click"
+                Foreground="Gray"
+                Style="{StaticResource MaterialDesignFlatAccentBgButton}">
+                Guest
+            </Button>
         </Grid>
 
     </Grid>
