--- a/GameFactoryWPF/LeaderBoard.xaml
+++ b/GameFactoryWPF/LeaderBoard.xaml
@@ -1,29 +1,48 @@
-﻿<Window x:Class="GameFactoryWPF.LeaderBoard"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GameFactoryWPF"
-        mc:Ignorable="d"
-        Title="LeaderBoard" Height="450" Width="800"
-        Style="{StaticResource MaterialDesignWindow}"
-        BorderThickness="0"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        Background="{DynamicResource MaterialDesignPaper}"
-        >
+﻿<UserControl
+    x:Class="GameFactoryWPF.LeaderBoard"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GameFactoryWPF"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Width="800"
+    Height="450"
+    Background="{DynamicResource MaterialDesignPaper}"
+    BorderThickness="0"
+    Template="{StaticResource CommonBackgroundTemplate}"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    mc:Ignorable="d">
     <Grid>
         <ListView ItemsSource="{Binding LeaderBoard}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Place}" Header="#"  Width="Auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name"  Width="Auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Wins}" Header="Wins"  Width="Auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Losses}" Header="Losses"  Width="Auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Draws}" Header="Draws"  Width="Auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding WinPercentage}" Header="Winpercentage"  Width="Auto"/>
+                    <GridViewColumn
+                        Width="Auto"
+                        DisplayMemberBinding="{Binding Place}"
+                        Header="#" />
+                    <GridViewColumn
+                        Width="Auto"
+                        DisplayMemberBinding="{Binding Name}"
+                        Header="Name" />
+                    <GridViewColumn
+                        Width="Auto"
+                        DisplayMemberBinding="{Binding Wins}"
+                        Header="Wins" />
+                    <GridViewColumn
+                        Width="Auto"
+                        DisplayMemberBinding="{Binding Losses}"
+                        Header="Losses" />
+                    <GridViewColumn
+                        Width="Auto"
+                        DisplayMemberBinding="{Binding Draws}"
+                        Header="Draws" />
+                    <GridViewColumn
+                        Width="Auto"
+                        DisplayMemberBinding="{Binding WinPercentage}"
+                        Header="Winpercentage" />
                 </GridView>
             </ListView.View>
         </ListView>
     </Grid>
-</Window>
+</UserControl>
