--- a/GameFactoryWPF/LeaderBoard.xaml
+++ b/GameFactoryWPF/LeaderBoard.xaml
@@ -1,20 +1,21 @@
 ﻿<UserControl
-    x:Class="GameFactoryWPF.LeaderBoard"
+    x:Class="GameFactoryWPF.Leaderboard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:GameFactoryWPF"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Width="800"
-    Height="450"
-    Background="{DynamicResource MaterialDesignPaper}"
+    Background="Transparent"
     BorderThickness="0"
-    Template="{StaticResource CommonBackgroundTemplate}"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     mc:Ignorable="d">
+
     <Grid>
-        <ListView ItemsSource="{Binding LeaderBoard}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <ListView ItemsSource="{Binding Leaderboard}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn
