--- a/GameFactoryWPF/MainWindow.xaml
+++ b/GameFactoryWPF/MainWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GameFactoryWPF"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="GameFactory"
@@ -27,20 +28,20 @@
             <RowDefinition Height="30" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <materialDesign:Card
-            Grid.Row="0"
-            Grid.Column="0"
-            Grid.ColumnSpan="3">
+        <materialDesign:Card Grid.Row="0" Grid.ColumnSpan="3">
             <Menu materialDesign:MenuAssist.TopLevelMenuItemHeight="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type materialDesign:Card}}, Path=ActualHeight}">
                 <MenuItem Header="File">
-                    <MenuItem Click="ToLeaderboard" Header="_LeaderBoard" />
+                    <MenuItem Click="ToLeaderboard" Header="Leaderboard" />
                     <MenuItem Click="ToStats" Header="_Stats" />
                     <MenuItem Click="ToTTT" Header="_TTT" />
+                    <MenuItem Click="ToMainScreen" Header="_Login" />
                 </MenuItem>
             </Menu>
         </materialDesign:Card>
 
-        <ContentControl x:Name="MainContent" />
+        <ContentControl x:Name="MainContent" Grid.Row="1">
+            <local:Login />
+        </ContentControl>
 
 
     </Grid>
