--- a/GameFactoryWPF/Stats.xaml
+++ b/GameFactoryWPF/Stats.xaml
@@ -1,39 +1,53 @@
-﻿<Window x:Class="GameFactoryWPF.Stats"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GameFactoryWPF"
-        mc:Ignorable="d"
-        Title="LeaderBoard" Height="450" Width="800"
-        Style="{StaticResource MaterialDesignWindow}"
-        BorderThickness="0"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        Background="{DynamicResource MaterialDesignPaper}"
-        >
+﻿<UserControl
+    x:Class="GameFactoryWPF.Stats"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GameFactoryWPF"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Background="Transparent"
+    BorderThickness="0"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    mc:Ignorable="d">
     <Grid>
-        <materialDesign:Card HorizontalAlignment="Left" Width="200" Height="400" Margin="10">
+        <materialDesign:Card
+            Width="200"
+            Height="400"
+            Margin="10"
+            HorizontalAlignment="Left">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition        Height="60" />
-                    <RowDefinition        Height="*" />
-                    <RowDefinition        Height="Auto" />
+                    <RowDefinition Height="60" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="Name" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" />
+                <TextBlock
+                    Grid.Row="0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontWeight="Bold"
+                    Text="Name" />
 
                 <Grid Grid.Row="1">
                     <StackPanel>
 
-                        <TextBlock Text="# in the World" FontWeight="Bold" TextAlignment="Right"/>
-                        <TextBlock Text="Wins"/>
-                        <TextBlock Text="Losses"/>
-                        <TextBlock Text="Draws"/>
-                        <TextBlock Text="WinPercentage" FontWeight="Bold"/>
+                        <TextBlock
+                            FontWeight="Bold"
+                            Text="# in the World"
+                            TextAlignment="Right" />
+                        <TextBlock Text="Wins" />
+                        <TextBlock Text="Losses" />
+                        <TextBlock Text="Draws" />
+                        <TextBlock FontWeight="Bold" Text="WinPercentage" />
                     </StackPanel>
                 </Grid>
-                <StackPanel Grid.Row="2" Margin="8" HorizontalAlignment="Right" Orientation="Horizontal">
-                    <Button Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}" Margin="4">
+                <StackPanel
+                    Grid.Row="2"
+                    Margin="8"
+                    HorizontalAlignment="Right"
+                    Orientation="Horizontal">
+                    <Button Margin="4" Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}">
                         <materialDesign:PackIcon Kind="YoutubeGaming" />
                     </Button>
                     <Button Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}">
@@ -43,4 +57,4 @@
             </Grid>
         </materialDesign:Card>
     </Grid>
-</Window>
+</UserControl>
